--- a/Chesham.Forza.Gui/MainWindow.xaml
+++ b/Chesham.Forza.Gui/MainWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chesham.Forza.Gui"
         mc:Ignorable="d"
-        Title="Forza DataBox" Height="150" Width="250">
-    <StackPanel HorizontalAlignment="Stretch" Margin="5">
+        Title="Forza DataBox" Height="150" Width="300">
+    <StackPanel HorizontalAlignment="Stretch" Margin="5" Opacity="{Binding opacity}">
         <WrapPanel>
             <CheckBox Click="PinClick"/>
             <TextBlock Text="{Binding carClass}" Margin="2 0 0 0"/>
-            <TextBlock Text="{Binding performanceIndex}"/>
+            <TextBlock Text="{Binding performanceIndexLiteral}"/>
             <TextBlock Text="{Binding drivetrain}" Margin="2 0 0 0"/>
             <TextBlock Text="{Binding cylinders}" Margin="2 0 0 0"/>
         </WrapPanel>
@@ -26,25 +26,30 @@
                             <RowDefinition/>
                             <RowDefinition/>
                             <RowDefinition/>
+                            <RowDefinition/>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="Max."/>
-                        <TextBlock Grid.Column="1" Text="{Binding engineMaxRpm}" Margin="5 0 0 0"/>
-                        <TextBlock Grid.Column="0" Grid.Row="1" Text="Redline"/>
-                        <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding engineRpmRedline, UpdateSourceTrigger=PropertyChanged}" MinWidth="50" HorizontalContentAlignment="Right" Margin="5 0 0 0"/>
-                        <StackPanel Grid.ColumnSpan="2" Grid.Row="2">
+                        <StackPanel Grid.ColumnSpan="2" Grid.Row="0" MinWidth="100">
                             <Grid>
                                 <ProgressBar Height="20" HorizontalAlignment="Stretch" Maximum="{Binding engineMaxRpm}" Value="{Binding engineCurrentRpm}" Foreground="{Binding engineGaugeColor}"/>
                                 <TextBlock Text="{Binding engineCurrentRpm, StringFormat={}{0:N0}}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             </Grid>
+                            <ProgressBar Margin="0 2 0 0" Height="4" HorizontalAlignment="Stretch" Maximum="{Binding engineMaxPower}" Value="{Binding power}" Foreground="Red"/>
+                            <ProgressBar Height="4" HorizontalAlignment="Stretch" Maximum="{Binding engineMaxTorque}" Value="{Binding torque}" Foreground="Blue"/>
                         </StackPanel>
+                        <TextBlock Grid.ColumnSpan="2" Grid.Row="1" Text="{Binding maxPowerRpm}" HorizontalAlignment="Center"/>
+                        <TextBlock Grid.ColumnSpan="2" Grid.Row="2" Text="{Binding maxTorqueRpm}" HorizontalAlignment="Center"/>
+                        <TextBlock Grid.ColumnSpan="2" Grid.Row="3" Text="{Binding zero2HundredTime}" HorizontalAlignment="Center"/>
                     </Grid>
                 </StackPanel>
             </GroupBox>
-            <TextBlock Grid.Column="1" Text="{Binding gear}" FontSize="100" FontFamily="Digital-7 Mono" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <WrapPanel Grid.Column="1" HorizontalAlignment="Center">
+                <TextBlock Text="{Binding gear}" FontSize="100" FontFamily="Digital-7 Mono" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                <TextBlock Text="{Binding speed, StringFormat={}{0,5:##0.0}}" FontSize="36" FontFamily="Digital-7 Mono" FontWeight="Bold" FontStretch="UltraCondensed" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            </WrapPanel>
         </Grid>
     </StackPanel>
 </Window>
